# multi-ai-v5.1

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE1.md  clean.py  docker-compose.dev.yml  fix_toml.py  gg.py  install_v5_2.py  main.py  pyproject.toml  test_client.py  test_git.py  test_llm.py  test_ollama.py  test_paths.py  test_sandbox.py  tox.ini
apps/api_gateway/: pyproject.toml
apps/api_gateway/src/multi_ai/api_gateway/: main.py  routes.py
apps/review_worker/: pyproject.toml
apps/review_worker/src/multi_ai/events/: __init__.py  broker.py
apps/review_worker/src/multi_ai/orchestrator/: activities.py  workflows.py
apps/review_worker/src/multi_ai/review_worker/: main.py  temporal_runner.py
apps/ui/: dashboard.py
libs/agents/: pyproject.toml
libs/agents/src/multi_ai/agents/: __init__.py  architect.py  base.py  coder.py  debugger.py  prompt_agent.py  researcher.py  supervisor.py  tester.py
libs/compliance/: pyproject.toml
libs/compliance/src/multi_ai/compliance/: __init__.py  analyzer.py
libs/core/: pyproject.toml
libs/core/src/multi_ai/core/: __init__.py  audit.py  budget.py  ledger.py  metrics.py  router.py  security.py  settings.py  validator.py
libs/events/: pyproject.toml
libs/events/src/multi_ai/events/: __init__.py  broker.py  schemas.py
libs/git/: pyproject.toml
libs/git/src/multi_ai/git/: __init__.py  client.py
libs/llm/: pyproject.toml
libs/llm/src/multi_ai/llm/: __init__.py  client.py  hybrid_router.py  parser.py  pyproject.toml  router.py
libs/orchestrator/: pyproject.toml
libs/orchestrator/src/multi_ai/orchestrator/: __init__.py  activities.py  workflows.py
libs/rag/: pyproject.toml
libs/rag/src/multi_ai/rag/: __init__.py  knowledge_base.py
libs/reporting/: pyproject.toml
libs/sandbox/: pyproject.toml
libs/sandbox/src/multi_ai/sandbox/: __init__.py  filesystem.py
libs/schema/: pyproject.toml
libs/schema/src/multi_ai/schema/: __init__.py  enhanced_manifest.py
libs/utils/: pyproject.toml
libs/utils/src/multi_ai/utils/: __init__.py  pdf_reporter.py  robust_ollama_client.py
scripts/: run_migrations.py  verify_manifest.py
tests/unit/core/: test_settings.py
tests/unit/events/: test_events.py
