[tool.poetry]
name = "multi-ai-workspace"
version = "5.2.0"
description = "Multi-AI Enterprise Monorepo Root"
authors = ["Feridun <email@address.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# --- LOCAL LIBRARIES ---
multi-ai-core = {path = "./libs/core", develop = true}
multi-ai-utils = {path = "./libs/utils", develop = true}
multi-ai-llm = {path = "./libs/llm", develop = true}
multi-ai-rag = {path = "./libs/rag", develop = true}
multi-ai-agents = {path = "./libs/agents", develop = true}
multi-ai-orchestrator = {path = "./libs/orchestrator", develop = true}
multi-ai-events = {path = "./libs/events", develop = true}
multi-ai-sandbox = {path = "./libs/sandbox", develop = true}
multi-ai-compliance = {path = "./libs/compliance", develop = true}
multi-ai-git = {path = "./libs/git", develop = true}

# --- EXTERNAL DEPENDENCIES ---
streamlit = "^1.32.0"
plotly = "^5.19.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
temporalio = "^1.4.0"
matplotlib = "^3.8.0"
Pillow = "^10.0.0"
watchdog = "^4.0.0"
scipy = "^1.11.0"
requests = "^2.31.0"
httpx = "^0.27.0"
cryptography = "^42.0.0"
prometheus-client = "^0.20.0"

# FastStream'i doğru şekilde (Extras ile) ekliyoruz
faststream = {extras = ["redis"], version = "^0.5.0"} 
tenacity = "^9.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
