[tool.poetry]
name = "multi-ai-agents"
version = "0.1.0"
description = "AI Agents"
authors = ["MultiAI Team"]
packages = [{include = "multi_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
multi-ai-core = {path = "../core", develop = true}
multi-ai-utils = {path = "../utils", develop = true}
multi-ai-llm = {path = "../llm", develop = true}
multi-ai-rag = {path = "../rag", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
