[tool.poetry]
name = 'multi-ai-core'
version = '5.1.0'
description = 'Core settings, security, utilities'
packages = [{ include = 'multi_ai/core', from = 'src' }]

[tool.poetry.dependencies]
python = '>=3.11,<3.14'
pydantic = '^2.5.0'
pydantic-settings = '^2.1.0'
cryptography = '^41.0.0'
python-dotenv = '^1.0.0'
opentelemetry-api = '^1.20.0'
typing-extensions = '^4.8.0'

[tool.poetry.group.dev.dependencies]
pytest = '^7.4.0'
pytest-asyncio = '^0.21.0'