[tool.poetry]
name = "multi-ai-core"
version = "0.1.0"
description = "Core System Config"
authors = ["MultiAI Team"]
packages = [{include = "multi_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
