[tool.poetry]
name = "multi-ai-events"
version = "0.1.0"
description = "Event Schemas"
authors = ["MultiAI Team"]
packages = [{include = "multi_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
