[tool.poetry]
name = "multi-ai-orchestrator"
version = "0.1.0"
description = "Workflow Orchestrator"
authors = ["MultiAI Team"]
packages = [{include = "multi_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.4.0"
multi-ai-core = {path = "../core", develop = true}
multi-ai-agents = {path = "../agents", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
