[tool.poetry]
name = "multi-ai-sandbox"
version = "0.1.0"
description = "Secure Code Execution Environment"
authors = ["MultiAI Team"]
packages = [{include = "multi_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
multi-ai-core = {path = "../core", develop = true}
multi-ai-utils = {path = "../utils", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
