[tool.poetry]
name = "multi-ai-utils"
version = "0.1.0"
description = "Shared Utilities"
authors = ["MultiAI Team"]
packages = [{include = "multi_ai", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
